--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.19.2",
     "react-router-dom": "^5.2.0"
   }
 }
